# cpp_python_binding_sandbox

./: .gitmodules  README.md  detail.md
pbind_capi/: CMakeLists.txt  package.xml  project_settings.cmake
pbind_capi/src/pbind_capi/: CMakeLists.txt  easy_bytes.cpp
pbind_cpp/: package.xml  project_settings.cmake
pbind_cpp/include/pbind_cpp/: easy_bytes.hpp
pbind_cpp/src/cpp/: easy_bytes.cpp
pbind_ctypes/: package.xml  setup.cfg  setup.py
pbind_ctypes/pbind_ctypes/: easy_bytes.py
pbind_pybind11/: CMakeLists.txt  package.xml  project_settings.cmake
pbind_pybind11/src/py/: test.py
pbind_pybind11/src/pybind/: easy_bytes.bind.cpp
pbind_swig/: CMakeLists.txt  package.xml  project_settings.cmake
pbind_swig/src/swig/: CMakeLists.txt
pbind_swig/src/swig/easy_bytes/: CMakeLists.txt  easy_bytes.i  project_settings.cmake
pbind_test/: package.xml  setup.cfg  setup.py
pbind_test/pbind_test/: Test_easy_vector.py  c_types.py  capi.py  pybind.py  swig.py
