<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pbind_test</name>
  <version>0.3.0</version>
  <description>
     .
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/dev-utils/issues</url>
  <url type="repository">https://github.com/eProsima/dev-utils</url>

  <depend>cmake_utils</depend>
  <depend>cpp_utils</depend>
  <depend>py_utils</depend>
  <depend>pbind_cpp</depend>
  <depend>pbind_swig</depend>
  <depend>pbind_pybind11</depend>
  <depend>pbind_capi</depend>
  <depend>pbind_ctypes</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
